; ModuleID = '/home/carl/AnghaBench/h2o/lib/core/extr_logconf.c_expand_line_buf.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/core/extr_logconf.c_expand_line_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64*, i64, i32)* @expand_line_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @expand_line_buf(i8* %0, i64* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64* %1, i64** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i64*, i64** %6, align 8
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %9, align 8
  br label %13

13:                                               ; preds = %16, %4
  %14 = load i64, i64* %9, align 8
  %15 = mul i64 %14, 2
  store i64 %15, i64* %9, align 8
  br label %16

16:                                               ; preds = %13
  %17 = load i64, i64* %9, align 8
  %18 = load i64, i64* %7, align 8
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %13, label %20

20:                                               ; preds = %16
  %21 = load i32, i32* %8, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %32, label %23

23:                                               ; preds = %20
  %24 = load i64, i64* %9, align 8
  %25 = call i8* @h2o_mem_alloc(i64 %24)
  store i8* %25, i8** %10, align 8
  %26 = load i8*, i8** %10, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = load i64*, i64** %6, align 8
  %29 = load i64, i64* %28, align 8
  %30 = call i32 @memcpy(i8* %26, i8* %27, i64 %29)
  %31 = load i8*, i8** %10, align 8
  store i8* %31, i8** %5, align 8
  br label %36

32:                                               ; preds = %20
  %33 = load i8*, i8** %5, align 8
  %34 = load i64, i64* %9, align 8
  %35 = call i8* @h2o_mem_realloc(i8* %33, i64 %34)
  store i8* %35, i8** %5, align 8
  br label %36

36:                                               ; preds = %32, %23
  %37 = load i64, i64* %9, align 8
  %38 = load i64*, i64** %6, align 8
  store i64 %37, i64* %38, align 8
  %39 = load i8*, i8** %5, align 8
  ret i8* %39
}

declare dso_local i8* @h2o_mem_alloc(i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i8* @h2o_mem_realloc(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
